--- a/_includes/section_intro.html
+++ b/_includes/section_intro.html
@@ -4,8 +4,20 @@
 	</div>
 	<div class="content-rounded-panel">
 		<div id="introBlurb">
-			I am a Senior Engineer working at Covestor, having previously spent over 6 years as a technical consultant at Accenture, giving me a good blend of enterprise and start-up experience. <br/><br/>
-			I enjoy creating great products with great user experiences and working in a dynamic environment with a focus on good development practices, automation and shipping small, frequent releases.
+			We are .Net and Angular Developers with 5 years of extensive experience in both front-end and back-end technologies.
+			Our skills
+			• Exceptional OOP implementation knowledge and skills in ASP.NET, MVC, Core, Web API, Web-Form, and WCF frameworks.
+			• High level N-Tier (DAL, BLL, and UI) architecture design and implementation experience.
+			• In-depth experience and knowledge in developing client-side application using Angular 2/4/5, with jQuery, JavaScript, TypeScript, Bootstrap, CSS, and HTML5 implementations.
+			• Knowledge and extensive practical experience in RESTful API, SOAP, HTTP and other communication protocols.
+			• Expertise in RDBMS with T-SQL, MySQL using MS SQL Server Management Studio, and Visual Studio. Proficient in creating relational and normalized databases.
+			• Familiarity and experience in SSIS, SSRS procedures and usage.
+			• Expertise in object-relational mapping using ADO.NET, Entity Framework, and LINQ with Code-First or Database-First implementations.
+			• Skilled in creating test cases and validate development releases with TDD or BDD methodologies.
+			• Experienced in using TFS and GIT.
+			• Professional experience with multiple development methodologies including Waterfall, and Agile/SCRUM using JIRA.
+			• Thorough understanding and experience interacting with clients/users and technical developers to translate requirements into specifications for a given project.
+			• Excellent communication, planning, time management skills, and highly motivated work ethics.
 		</div>
 		<br>
 	</div>
