--- a/_includes/section_intro.html
+++ b/_includes/section_intro.html
@@ -6,18 +6,32 @@
 		<div id="introBlurb">
 			We are .Net and Angular Developers with 5 years of extensive experience in both front-end and back-end technologies.
 			Our skills
-			• Exceptional OOP implementation knowledge and skills in ASP.NET, MVC, Core, Web API, Web-Form, and WCF frameworks.
-			• High level N-Tier (DAL, BLL, and UI) architecture design and implementation experience.
-			• In-depth experience and knowledge in developing client-side application using Angular 2/4/5, with jQuery, JavaScript, TypeScript, Bootstrap, CSS, and HTML5 implementations.
-			• Knowledge and extensive practical experience in RESTful API, SOAP, HTTP and other communication protocols.
-			• Expertise in RDBMS with T-SQL, MySQL using MS SQL Server Management Studio, and Visual Studio. Proficient in creating relational and normalized databases.
-			• Familiarity and experience in SSIS, SSRS procedures and usage.
-			• Expertise in object-relational mapping using ADO.NET, Entity Framework, and LINQ with Code-First or Database-First implementations.
-			• Skilled in creating test cases and validate development releases with TDD or BDD methodologies.
-			• Experienced in using TFS and GIT.
-			• Professional experience with multiple development methodologies including Waterfall, and Agile/SCRUM using JIRA.
-			• Thorough understanding and experience interacting with clients/users and technical developers to translate requirements into specifications for a given project.
-			• Excellent communication, planning, time management skills, and highly motivated work ethics.
+			<ul>
+			<li>• Exceptional OOP implementation knowledge and skills in ASP.NET, MVC, Core, Web API, Web-Form, and WCF frameworks.
+			</li>
+			<li>• High level N-Tier (DAL, BLL, and UI) architecture design and implementation experience.
+			</li>
+			<li>• In-depth experience and knowledge in developing client-side application using Angular 2/4/5, with jQuery, JavaScript, TypeScript, Bootstrap, CSS, and HTML5 implementations.
+			</li>
+			<li>• Knowledge and extensive practical experience in RESTful API, SOAP, HTTP and other communication protocols.
+			</li>
+			<li>• Expertise in RDBMS with T-SQL, MySQL using MS SQL Server Management Studio, and Visual Studio. Proficient in creating relational and normalized databases.
+			</li>
+			<li>• Familiarity and experience in SSIS, SSRS procedures and usage.
+			</li>
+			<li>• Expertise in object-relational mapping using ADO.NET, Entity Framework, and LINQ with Code-First or Database-First implementations.
+			</li>
+			<li>• Skilled in creating test cases and validate development releases with TDD or BDD methodologies.
+			</li>
+			<li>• Experienced in using TFS and GIT.
+			</li>
+			<li>• Professional experience with multiple development methodologies including Waterfall, and Agile/SCRUM using JIRA.
+			</li>
+			<li>• Thorough understanding and experience interacting with clients/users and technical developers to translate requirements into specifications for a given project.
+			</li>
+			<li>• Excellent communication, planning, time management skills, and highly motivated work ethics.
+			</li>
+			</ul>
 		</div>
 		<br>
 	</div>
