--- a/_includes/section_intro.html
+++ b/_includes/section_intro.html
@@ -4,10 +4,10 @@
 	</div>
 	<div class="content-rounded-panel">
 		<div id="introBlurb">
-			We are .Net and Angular Developers with 5 years of extensive experience in both front-end and back-end technologies.
+			I am .Net and Angular Developers with 5 years of extensive experience in both front-end and back-end technologies.
 			Our skills
 			<ul>
-			<li>Exceptional OOP implementation knowledge and skills in ASP.NET, MVC, Core, Web API, Web-Form, and WCF frameworks.
+			<li>Exceptional OOP implementation knowledge and skills in NET Core 6/7/8, Web API, Razor Pages.
 			</li>
 			<li>High level N-Tier (DAL, BLL, and UI) architecture design and implementation experience.
 			</li>
@@ -15,15 +15,11 @@
 			</li>
 			<li>Knowledge and extensive practical experience in RESTful API, SOAP, HTTP and other communication protocols.
 			</li>
-			<li>Expertise in RDBMS with T-SQL, MySQL using MS SQL Server Management Studio, and Visual Studio. Proficient in creating relational and normalized databases.
-			</li>
-			<li>Familiarity and experience in SSIS, SSRS procedures and usage.
-			</li>
 			<li>Expertise in object-relational mapping using ADO.NET, Entity Framework, and LINQ with Code-First or Database-First implementations.
 			</li>
 			<li>Skilled in creating test cases and validate development releases with TDD or BDD methodologies.
 			</li>
-			<li>Experienced in using TFS and GIT.
+			<li>Experienced in using GIT.
 			</li>
 			<li>Professional experience with multiple development methodologies including Waterfall, and Agile/SCRUM using JIRA.
 			</li>
